--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,70 +3,74 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/timerFragment">
+    app:startDestination="@id/menu_timer">
 
     <fragment
-        android:id="@+id/timerFragment"
+        android:id="@+id/menu_timer"
         android:name="com.example.pomodoro_timer.ui.fragments.TimerFragment"
         android:label="TimerFragment"
         tools:layout="@layout/fragment_timer">
+
         <action
-            android:id="@+id/action_timerFragment_to_taskFragment"
-            app:destination="@id/taskFragment" />
+            android:id="@+id/action_menu_timer_to_menu_task"
+            app:destination="@id/menu_task" />
         <action
-            android:id="@+id/action_timerFragment_to_statsFragment"
-            app:destination="@id/statsFragment" />
+            android:id="@+id/action_menu_timer_to_menu_stats"
+            app:destination="@id/menu_stats" />
         <action
-            android:id="@+id/action_timerFragment_to_settingsFragment"
-            app:destination="@id/settingsFragment" />
+            android:id="@+id/action_menu_timer_to_menu_settings"
+            app:destination="@id/menu_settings" />
     </fragment>
 
     <fragment
-        android:id="@+id/taskFragment"
+        android:id="@+id/menu_task"
         android:name="com.example.pomodoro_timer.ui.fragments.TaskFragment"
         android:label="TaskFragment"
         tools:layout="@layout/fragment_task">
+
         <action
-            android:id="@+id/action_taskFragment_to_timerFragment"
-            app:destination="@id/timerFragment" />
+            android:id="@+id/action_menu_task_to_menu_timer3"
+            app:destination="@id/menu_timer" />
         <action
-            android:id="@+id/action_taskFragment_to_statsFragment"
-            app:destination="@id/statsFragment" />
+            android:id="@+id/action_menu_task_to_menu_stats2"
+            app:destination="@id/menu_stats" />
         <action
-            android:id="@+id/action_taskFragment_to_settingsFragment"
-            app:destination="@id/settingsFragment" />
+            android:id="@+id/action_menu_task_to_menu_settings2"
+            app:destination="@id/menu_settings" />
     </fragment>
 
     <fragment
-        android:id="@+id/statsFragment"
+        android:id="@+id/menu_stats"
         android:name="com.example.pomodoro_timer.ui.fragments.StatsFragment"
         android:label="StatsFragment"
         tools:layout="@layout/fragment_stats">
+
         <action
-            android:id="@+id/action_statsFragment_to_timerFragment"
-            app:destination="@id/timerFragment" />
+            android:id="@+id/action_menu_stats_to_menu_timer"
+            app:destination="@id/menu_timer" />
         <action
-            android:id="@+id/action_statsFragment_to_taskFragment"
-            app:destination="@id/taskFragment" />
+            android:id="@+id/action_menu_stats_to_menu_task"
+            app:destination="@id/menu_task" />
         <action
-            android:id="@+id/action_statsFragment_to_settingsFragment"
-            app:destination="@id/settingsFragment" />
+            android:id="@+id/action_menu_stats_to_menu_settings"
+            app:destination="@id/menu_settings" />
     </fragment>
 
     <fragment
-        android:id="@+id/settingsFragment"
+        android:id="@+id/menu_settings"
         android:name="com.example.pomodoro_timer.ui.fragments.SettingsFragment"
         android:label="SettingsFragment"
         tools:layout="@layout/fragment_settings">
+
         <action
-            android:id="@+id/action_settingsFragment_to_statsFragment"
-            app:destination="@id/statsFragment" />
+            android:id="@+id/action_menu_settings_to_menu_stats"
+            app:destination="@id/menu_stats" />
         <action
-            android:id="@+id/action_settingsFragment_to_taskFragment"
-            app:destination="@id/taskFragment" />
+            android:id="@+id/action_menu_settings_to_menu_task"
+            app:destination="@id/menu_task" />
         <action
-            android:id="@+id/action_settingsFragment_to_timerFragment"
-            app:destination="@id/timerFragment" />
+            android:id="@+id/action_menu_settings_to_menu_timer"
+            app:destination="@id/menu_timer" />
     </fragment>
 
 </navigation>
