--- a/app/src/main/res/layout/fragment_settings_account.xml
+++ b/app/src/main/res/layout/fragment_settings_account.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp"
     android:layout_width="match_parent"
@@ -41,7 +41,8 @@
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:contentDescription="Profile Image"
-        android:src="Insert Picture Here" />
+        android:src="@drawable/ic_tomato"
+        app:tint="@color/bottom_nav_color1"/>
 
     <TextView
         android:id="@+id/username"
