--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,22 +4,22 @@
     <!-- Change icons later after it is provided -->
     <item
         android:id="@+id/menu_timer"
-        android:title="@string/menu_timer"
-        android:icon="@drawable/ic_launcher_background"/>
+        android:title="@string/menu_dot"
+        android:icon="@drawable/ic_tomato"/>
 
     <item
         android:id="@+id/menu_task"
-        android:title="@string/menu_task"
-        android:icon="@drawable/ic_launcher_background"/>
+        android:title="@string/menu_dot"
+        android:icon="@drawable/ic_tasks"/>
 
     <item
         android:id="@+id/menu_stats"
-        android:title="@string/menu_stats"
-        android:icon="@drawable/ic_launcher_background"/>
+        android:title="@string/menu_dot"
+        android:icon="@drawable/ic_stats"/>
 
     <item
         android:id="@+id/menu_settings"
-        android:title="@string/menu_settings"
-        android:icon="@drawable/ic_launcher_background"/>
+        android:title="@string/menu_dot"
+        android:icon="@drawable/ic_settings"/>
 
 </menu>
