--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,4 +36,9 @@
     <color name="progress_bar_color1">#6145AC</color>
     <color name="progress_bar_color2">#CB79F5</color>
 
+    <!-- Bottom nav colors -->
+    <color name="bottom_nav_color1">#50389A</color>
+    <color name="bottom_nav_color2">#9A5AF8</color>
+
+
 </resources>
