--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,20 @@
         app:navGraph="@navigation/nav_graph"
         tools:layout="@layout/fragment_timer" />
 
+    <ImageButton
+        android:id="@+id/add_task_category_btn_id"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/ic_add_task"
+        android:contentDescription="@string/add_task_category_btn"
+        android:layout_marginBottom="45dp"
+        android:background="@android:color/transparent"
+        android:elevation="10dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <!--
         After adding the icons assets
         set the labelVisibility mode to unlabeled
