Feat: Add tasks Display Tasks,Add Categories Display Categories,Newfeat: draggable tasklist, display first task

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,4 +41,8 @@
     <color name="bottom_nav_color2">#9A5AF8</color>
 
 
+    <!-- Misc colors -->
+    <color name="dim_color">#AD9999</color>
+    <color name="dim_color2">#33000000</color>
+
 </resources>
