--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -27,6 +27,56 @@
             app:layout_constraintGuide_percent="0.75"
             android:orientation="vertical"/>
 
+        <!-- First Task Priority -->
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/first_task_card_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@id/timer_animation_view_id"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:padding="14dp"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:background="@drawable/background_gradient_card">
+
+                <View
+                    android:id="@+id/priority_level_dot_id"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:backgroundTint="@color/progress_bar_color2"
+                    android:background="@color/progress_bar_color1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/task_title_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toEndOf="@+id/priority_level_dot_id"
+                    app:layout_constraintEnd_toStartOf="@+id/session_count_id"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/session_count_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="16sp"
+                    app:layout_constraintStart_toEndOf="@+id/task_title_id"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.google.android.material.card.MaterialCardView>
 
         <com.example.pomodoro_timer.ui.custom.TimerAnimationView
             android:id="@+id/timer_animation_view_id"
