--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -32,8 +32,10 @@
             android:id="@+id/guideline3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintGuide_percent="0.95"
+            app:layout_constraintGuide_percent="0.75"
             android:orientation="horizontal"/>
+
+        <!-- End of Guidelines -->
 
         <!-- just the task label -->
         <com.google.android.material.textview.MaterialTextView
