--- a/app/src/main/res/layout/fragment_task_add.xml
+++ b/app/src/main/res/layout/fragment_task_add.xml
@@ -23,7 +23,7 @@
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.75"
+        app:layout_constraintGuide_percent="0.90"
         android:orientation="horizontal"/>
 
     <!-- End of Guidelines -->
@@ -43,7 +43,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/task_tab_layout_id"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
