--- a/app/src/main/res/layout/fragment_task_add_task.xml
+++ b/app/src/main/res/layout/fragment_task_add_task.xml
@@ -230,7 +230,8 @@
                 android:layout_marginStart="16dp"
                 android:backgroundTint="@color/category_title_color3"
                 app:layout_constraintTop_toBottomOf="@+id/task_category_picker_layout_id"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/save_btn_id"
@@ -242,7 +243,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/task_category_picker_layout_id"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
