Feat: category icon selection

--- a/app/src/main/res/layout/fragment_task_add_category.xml
+++ b/app/src/main/res/layout/fragment_task_add_category.xml
@@ -110,6 +110,7 @@
                 android:textColor="@color/dim_color"
                 android:textSize="14sp" />
 
+            <!-- Category selection icons -->
             <LinearLayout
                 android:id="@+id/iconSelectorLayout"
                 android:layout_width="match_parent"
